# memscrub

./: Cargo.toml  extract-memconfig
src/: main.rs
