[package]
name = "memscrub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
memscrublib = { path = "../memscrublib" }
memscrublib_arch = { path = "../memscrublib_arch" }
memscrublib_base = { path = "../memscrublib_base" }

